Wallet and logout alignment fix
Wallet and logout alignment fix

--- a/src/app/shared/theme/styles/root.scss
+++ b/src/app/shared/theme/styles/root.scss
@@ -55,7 +55,8 @@ html, body {
   height: 100vh;
 }
 
-.sidenav{
+.sidenav {
+  width: $regular-sidenav-width;
   height: 100%;
   overflow: hidden;
 }
